--- a/app.json
+++ b/app.json
@@ -230,14 +230,14 @@
     /**
      * Settings specific to modern toolkit builds.
      */
-    /*"modern": {
+    "modern": {
         "js": [
             // Remove this entry to individually load sources from the framework.
             {
                 "path": "${framework.dir}/build/ext-modern-all-debug.js"
             }
         ]
-    },*/
+    },
 
     /**
      * List of all CSS assets in the right inclusion order.
@@ -560,7 +560,7 @@
             "sass": {
                 // "save": "classic/sass/save.scss"
             }
-        }/*,
+        },
 
         "modern": {
             "toolkit": "modern",
@@ -570,7 +570,7 @@
             "sass": {
                 // "save": "modern/sass/save.scss"
             }
-        }*/
+        }
     },
     
 
